fix: text-container spacing

--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@
 }
 
 body {
-    background-color: var(--bg-color);
-    color: var(--text-color);
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 /* Header */
@@ -65,7 +65,7 @@ nav> ul > li > a {
 .text-container {
     height: 100vh;
     width: 100%;
-    background-color: var(--bg-color);
+    background: var(--bg-color);
 }
 
 .img-container {
@@ -135,6 +135,8 @@ nav> ul > li > a {
 .projects-grid h2 {
     text-align: center;
     margin-bottom: 2rem;
+    margin-top: 2rem;
+    padding-top: 2rem;
 }
 
 .project-card { 
@@ -363,7 +365,6 @@ nav > ul {
     margin-bottom: 2rem;
 }
 .projects-grid h2 {
-    margin-top: 3rem;
     margin-bottom: 3rem;
 }
 
